# script-automation-pdf-to-excel

./: .env.example  .gitignore  README.md  invoice_reader.py  preflight.py  pyproject.toml  test_mail.py
config/: settings.example.json
docs/: field_extraction_analysis.md  pdf_examples_technical_analysis.md
src/invoice_batch/: __init__.py  __main__.py  bootstrap.py  cli.py  config.py  logging_setup.py
src/invoice_batch/application/: batch_runner.py  invoice_processor.py
src/invoice_batch/domain/: contracts.py  models.py
src/invoice_batch/services/: azure_document_intelligence.py  csv_writer.py  document_classifier.py  file_manager.py  graph_mailer.py  onedrive_uploader.py  reporting.py  validation.py
